<resources>
    <string name="app_name">罗德岛移动终端</string>

    <!-- General -->
    <string name="general_on">开</string>
    <string name="general_off">关</string>

    <!-- Drawer User strings -->
    <string name="drawer_user_login">登陆</string>
    <string name="drawer_user_name">JamXi</string>
    <string name="drawer_feedback">意见反馈</string>

    <!-- Drawer Account strings -->
    <string name="drawer_account_name">JamXi #1</string>
    <string name="drawer_unbind">解绑</string>

    <!-- Toolbox toolbox strings -->
    <string name="drawer_toolbox_name">明日方舟工具箱 5.0</string>
    <string name="drawer_more_toolbox">更多游戏工具箱</string>

    <!-- Toolbox settings strings -->
    <string name="drawer_settings_display_system">显示·跟随系统</string>
    <string name="drawer_settings_display_mode">显示模式</string>
    <string name="drawer_settings_shareholder">股东招募</string>
    <string name="drawer_settings_autoupdate">自动检测更新</string>

    <!-- Login strings -->
    <string name="email">电子邮箱</string>
    <string name="password">密码</string>
    <string name="login">登录</string>
    <string name="test_account">测试账户</string>
    <string name="login_waiting">等待操作</string>
    <string name="jsg_llc_craft">*JSG-LLC与CRAFT账号均可登录</string>

    <string name="checkbox_follow_text">只看收藏</string>
    <string name="text_toolbox_mention_follow">该分类下博士还没有收藏任何功能哦</string>
    <string name="text_toolbox_button_mention_follow">去添加</string>
    <string name="text_toolbox_mention_advice">没有你想要的功能？</string>
    <string name="text_toolbox_button_mention_advice">去提需求</string>
    <string name="text_toolbox_title">明日方舟 工具箱5.0</string>
    <string name="text_toolbox_search">工具箱5.0 搜索</string>

    <string-array name="subjects">
        <item>安卓开发</item>
        <item>Web开发</item>
        <item>数据结构</item>
        <item>网络技术</item>
        <item>Python编程</item>
        <item>形势与政策</item>
    </string-array>
    <!-- main page strings -->
    <string name="more_features">更多功能 >></string>
    <string name="Detailed_features">详细功能 >></string>
    <string name="apps_line_1">抽卡分析</string>
    <string name="apps_line_2">PRTS</string>
    <string name="apps_line_3">企鹅物流</string>
    <string name="apps_line_4">敌人一览</string>
    <string name="mainpage_app_line">工具箱 · 常用应用</string>
    <string name="mainpage_derivative">鹰角网络 · 官方IP衍生</string>
    <string name="checkbox_item_1">阿米娅</string>
    <string name="checkbox_item_2">凯尔希</string>
    <string name="checkbox_item_3">斯卡蒂</string>
    <string name="home_card_label1">WELCOME BACK DOCTOR</string>
    <string name="home_card_label2">XXXX @ X</string>
    <string name="card_act_title">多索留斯假日</string>
    <string name="card_act_days">3</string>
    <string name="card_act_hours">3</string>

</resources>