<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DrawerActivity"
    android:background="?attr/drawer_background_color">

    <!-- 整个Layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:maxWidth="316dp"
        android:gravity="left">

        <!-- 侧边栏 -->
        <LinearLayout
            android:layout_width="316dp"
            android:layout_height="match_parent"
            android:paddingHorizontal="12dp"
            android:paddingVertical="24dp"
            android:orientation="vertical">

            <!-- 头像+意见反馈 -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:weightSum="2"
                android:gravity="center">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="left|center">

                    <com.makeramen.roundedimageview.RoundedImageView
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:src="?attr/general_secondery_text_color"
                        app:riv_corner_radius="24dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/drawer_user_name"
                        android:layout_marginLeft="12dp"
                        android:textColor="?attr/general_text_color"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="right|center">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/drawer_feedback"
                        android:textColor="?attr/general_text_color"/>

                    <ImageView
                        android:layout_width="22dp"
                        android:layout_height="22dp"
                        android:layout_marginLeft="5dp"
                        android:src="?attr/drawer_feedback"
                        />

                </LinearLayout>

            </LinearLayout>

            <!-- 账号绑定+工具箱 -->
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="?attr/drawer_card_background"
                app:cardCornerRadius="12dp"
                android:layout_marginTop="24dp"
                android:outlineSpotShadowColor="@color/transparent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <!-- 账号绑定 -->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:background="?attr/drawer_account_background"
                        android:gravity="center"
                        android:paddingHorizontal="20dp"
                        android:weightSum="10">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/drawer_account_name"
                            android:textSize="14sp"
                            android:textColor="?attr/drawer_account_text_color"
                            android:layout_weight="9"/>

                        <Button
                            android:layout_width="56dp"
                            android:layout_height="wrap_content"
                            android:text="@string/drawer_unbind"
                            android:textSize="14sp"
                            android:padding="0dp"
                            android:textColor="@color/white"
                            android:textStyle="bold"
                            android:layout_weight="1"
                            android:backgroundTint="?attr/drawer_unbind_button_background"
                            android:layout_margin="4dp"/>

                    </LinearLayout>

                    <!-- 工具箱1 -->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:background="?attr/drawer_toolbox_checked_background"
                        android:gravity="center"
                        android:paddingHorizontal="16dp"
                        android:weightSum="10"
                        android:layout_marginTop="1dp">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="left|center"
                            android:layout_weight="9">

                            <com.makeramen.roundedimageview.RoundedImageView
                                android:layout_width="24dp"
                                android:layout_height="24dp"
                                android:src="@drawable/rimt_logo"
                                app:riv_corner_radius="24dp"/>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="12dp"
                                android:text="@string/drawer_toolbox_name"
                                android:textSize="14sp"
                                android:textColor="?attr/drawer_toolbox_checked_text_color"/>

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="right">

                            <ImageView
                                android:layout_width="28dp"
                                android:layout_height="28dp"
                                android:src="?attr/drawer_sel"/>

                        </LinearLayout>

                    </LinearLayout>

                    <!-- 工具箱2 -->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:background="?attr/drawer_toolbox_unchecked_background"
                        android:gravity="center"
                        android:paddingHorizontal="16dp"
                        android:weightSum="10"
                        android:layout_marginTop="1dp">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="left|center"
                            android:layout_weight="9">

                            <com.makeramen.roundedimageview.RoundedImageView
                                android:layout_width="24dp"
                                android:layout_height="24dp"
                                android:src="?attr/drawer_account_text_color"
                                app:riv_corner_radius="24dp"/>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="12dp"
                                android:text="Empty"
                                android:textSize="14sp"
                                android:textColor="?attr/drawer_toolbox_unchecked_text_color"/>

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="right">

                            <ImageView
                                android:layout_width="28dp"
                                android:layout_height="28dp"
                                android:src="?attr/drawer_unsel"/>

                        </LinearLayout>

                    </LinearLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <!-- 显示设置 -->
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="?attr/drawer_card_background"
                app:cardCornerRadius="12dp"
                android:layout_marginTop="12dp"
                android:outlineSpotShadowColor="@color/transparent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <!-- 工具箱1 -->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:background="?attr/drawer_toolbox_checked_background"
                        android:gravity="center"
                        android:paddingHorizontal="16dp"
                        android:weightSum="10"
                        android:layout_marginTop="1dp">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="left|center"
                            android:layout_weight="9">

                            <ImageView
                                android:layout_width="24dp"
                                android:layout_height="24dp"
                                android:src="?attr/drawer_settings_display_system"/>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="12dp"
                                android:text="@string/drawer_settings_display_system"
                                android:textSize="14sp"
                                android:textColor="?attr/drawer_toolbox_checked_text_color"/>

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="right|center"
                            android:layout_weight="1">

                            <ImageView
                                android:layout_width="28dp"
                                android:layout_height="28dp"
                                android:src="?attr/drawer_sel"/>

                        </LinearLayout>

                    </LinearLayout>

                    <!-- 工具箱2 -->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:background="?attr/drawer_toolbox_unchecked_background"
                        android:gravity="center"
                        android:paddingHorizontal="16dp"
                        android:weightSum="10"
                        android:layout_marginTop="1dp">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="left|center"
                            android:layout_weight="9">

                            <ImageView
                                android:layout_width="24dp"
                                android:layout_height="24dp"
                                android:src="?attr/drawer_settings_display_mode"/>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="12dp"
                                android:text="@string/drawer_settings_display_mode"
                                android:textSize="14sp"
                                android:textColor="?attr/drawer_toolbox_unchecked_text_color"/>

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="right|center"
                            android:layout_weight="1">

                            <com.google.android.material.switchmaterial.SwitchMaterial
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"/>

                        </LinearLayout>

                    </LinearLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <!-- 其他设置 -->
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="?attr/drawer_card_background"
                app:cardCornerRadius="12dp"
                android:layout_marginTop="12dp"
                android:outlineSpotShadowColor="@color/transparent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <!-- 工具箱1 -->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:background="?attr/drawer_toolbox_checked_background"
                        android:gravity="center"
                        android:paddingHorizontal="16dp"
                        android:weightSum="10"
                        android:layout_marginTop="1dp">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="left|center"
                            android:layout_weight="10">

                            <ImageView
                                android:layout_width="24dp"
                                android:layout_height="24dp"
                                android:src="?attr/drawer_settings_shareholder"/>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="12dp"
                                android:text="@string/drawer_settings_shareholder"
                                android:textSize="14sp"
                                android:textColor="?attr/drawer_toolbox_checked_text_color"/>

                        </LinearLayout>

                    </LinearLayout>

                    <!-- 工具箱2 -->
                    <LinearLayout
                        android:id="@+id/drawer_settings_autoupdate_layout"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:background="?attr/drawer_toolbox_checked_background"
                        android:gravity="center"
                        android:paddingHorizontal="16dp"
                        android:weightSum="10"
                        android:layout_marginTop="1dp">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="left|center"
                            android:layout_weight="9">

                            <ImageView
                                android:layout_width="24dp"
                                android:layout_height="24dp"
                                android:src="?attr/drawer_settings_autoupdate"/>

                            <TextView
                                android:id="@+id/drawer_settings_autoupdate_text"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="12dp"
                                android:text="@string/drawer_settings_autoupdate"
                                android:textSize="14sp"
                                android:textColor="?attr/drawer_toolbox_checked_text_color"/>

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="left|center"
                            android:layout_weight="1">

                            <TextView
                                android:id="@+id/drawer_settings_autoupdate_status"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textColor="@color/general_secondery_text_color_night"
                                android:text="@string/general_on"/>

                        </LinearLayout>

                    </LinearLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>